--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
   <title>Põe no Ar</title>
+<meta http-equiv="refresh" content="0; URL='https://wiggoberge.github.io/construcao.html'"/>
 </head>
 
 <body style="background-color:#f8e515;">
-  <img src="construcao.png">
+  
 </body>
   </html>
